# apiome

./: .dockerignore  .env  .gitignore  AGENTS.md  FEATURE_ROADMAP.md  FEATURE_ROADMAP_AI.md  FEATURE_ROADMAP_CANVAS.md  FEATURE_ROADMAP_CODE_GENERATION.md  FEATURE_ROADMAP_DETECTIVE.md  FEATURE_ROADMAP_IMPORT.md  FEATURE_ROADMAP_LINTING.md  FEATURE_ROADMAP_PATHS.md  FEATURE_ROADMAP_TEMPLATES.md  PLANNED_FEATURE_ROADMAP_CANVAS.md  PLANNED_FEATURE_ROADMAP_IMPORT.md  PLANNED_FEATURE_ROADMAP_PATHS.md  PLANNED_FEATURE_ROADMAP_VERSIONING.md  PLANNED_IMPROVEMENTS_ROADMAP_PATHS.md  README.md  TEST_SUITE_SUMMARY.md  docker-compose.env.example  docker-compose.prod.env.example  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  run.sh  setup.sh  turbo.json
apiome-cli/: .env.example  AGENTS.md  README.md  package.json  pyproject.toml  run.sh
apiome-cli/test/: scaffold.test.mjs  turbo_pipeline.test.mjs
apiome-cli/tests/: conftest.py  test_agents.py  test_arazzo_validation.py  test_auth_commands.py  test_client_errors.py  test_compat_command.py  test_config.py  test_config_command.py  test_console_script.py  test_conversion_output.py  test_convert_command.py  test_dependencies.py  test_detect.py  test_diff_command.py  test_doctor.py  test_export_asyncapi_command.py  test_export_avro_command.py  test_export_command.py  test_export_evidence_command.py  test_export_generic_command.py  test_export_graphql_command.py  test_export_grpc_command.py  test_export_output.py  test_export_projection_parity.py  test_extract_openapi_info.py  test_extract_slug.py  test_help_and_exit_codes.py  test_http_client.py  test_import_arazzo_command.py  test_import_asyncapi.py  test_import_auto_command.py  test_import_graphql.py  test_import_grpc.py  test_import_json_schema_command.py  test_import_json_schema_type_command.py  test_import_openapi.py  test_import_openapi_command.py  test_import_output.py  test_import_progress.py  test_import_publish.py  (+49 more)
apiome-mock/: .env.example  Dockerfile  README.md  package.json  pyproject.toml  run.sh
apiome-mock/tests/: conftest.py  test_canonical_compiler.py  test_chaos.py  test_chaos_injection.py  test_ci_postgres_service.py  test_crud_resources.py  test_draft_private_mock.py  test_event_transport.py  test_grpc_transport.py  test_guard.py  test_http_health_route.py  test_memory_session_store.py  test_message_resolver.py  test_mock_request_integration.py  test_postgres_session_store.py  test_problems.py  test_proto_descriptor_builder.py  test_rate_limit.py  test_request_validator.py  test_response_resolver.py  test_routing.py  test_scenario_overrides.py  test_scenarios.py  test_schema_synthesizer.py  (+3 more)
(+4474 files in other folders)
