[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "apiome-cli"
version = "0.29.0"
description = "Command-line client for the Apiome REST API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer[all]>=0.15",
    "httpx>=0.27",
    "pydantic-settings>=2.0",
    "py-yaml12>=0.1.0",
    "jsonschema>=4.0",
    "openapi-spec-validator>=0.8.5",
    "openapi-schema-validator>=0.6",
]

[project.scripts]
apiome = "apiome_cli.main:run"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.35",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/apiome_cli"]

[tool.hatch.build.targets.wheel.force-include]
"src/apiome_cli/import_/schemas" = "apiome_cli/import_/schemas"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]
