[project]
name = "apiome-mock"
version = "0.1.0"
description = "Objectified mock server runtime for Apiome (FastAPI)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Apiome Team" }]
keywords = ["fastapi", "apiome", "openapi", "mock"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "apiome-mcp>=0.2.0",
    "apiome-rest>=1.0.53",
    "fastapi>=0.115.0",
    "psycopg[binary,pool]>=3.2.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "structlog>=24.4.0",
    "uvicorn[standard]>=0.32.0",
]

[project.scripts]
apiome-mock = "apiome_mock.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/apiome_mock"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "httpx>=0.28.1",
]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
explicit_package_bases = true
mypy_path = ["src", "../apiome-rest/src", "../apiome-mcp/src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "../apiome-rest/src", "../apiome-mcp/src"]

[tool.uv.sources]
apiome-mcp = { path = "../apiome-mcp", editable = true }
apiome-rest = { path = "../apiome-rest", editable = true }
